--- a/Siercks.org/wwwroot/style.css
+++ b/Siercks.org/wwwroot/style.css
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     font-family: Garamond;
+    background-color: #8C1D40;
+    color: white;
 }
 
 img {
@@ -21,6 +23,12 @@ img {
 }
 main {
     flex: 1;
+    background-color: #8C1D40;
+}
+.mainblurb {
+    flex: 1;
+    color: white;
+    background-color: #8C1D40;
 }
 
 .sidebar {
