--- a/Siercks Portfolio/Siercks/Client/Pages/Index.razor
+++ b/Siercks Portfolio/Siercks/Client/Pages/Index.razor
@@ -4,37 +4,28 @@
 
 <PageTitle>About Me</PageTitle>
 
-
-
 <div>
     <img src="IMG-6661alt.png" style="object-fit:scale-down" class="profile" />
 
 </div>
-<h1>About Me</h1>
+<h1 class="text-center">About Me</h1>
 <body style="left">
-    My name is Andrew Siercks. I'm an aspiring software engineer currently loving in Oceanside, California.
-    <h3>Early Life</h3>
-    I grew up in a suburb of Kansas City called Kearney, MO.
-    I've always loved technology and chose that path when I joined the Marine Corps.
+    <div>My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and chose that path when I joined the Marine Corps.
+    <br /><br />
+My work closest resembles a server/system administrator. I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
+    <br /><br />
+        During 2020, I made the decision to return to college. I enrolled in Arizona State University and in May of 2022, graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine and I love city design!</div>
     <br>
-    <br>
-    During 2020, I made the decision to return to college. I enrolled in Arizona State University and in May of 2022,
-    <br />
-    graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine.
-    <br>
-    <br>
-    <h3>Hobbies</h3>
+    <h3 class="text-decoration-underline">Hobbies</h3>
     <ul>
         <li>Spending time with my family</li>
-        <li>Reading. some of my favorite books include:</li>
+        <li>Reading, some of my favorite books include:</li>
         <ul>
             <li><i>A Confederacy of Dunces</i> by John Kennedy Toole</li>
-            <li>Skin in the Game by NNT </li>
+            <li><i>Skin in the Game</i> by Nassim Nicholas Taleb </li>
             <li><i>A Song of Ice and Fire</i> series by George R. R. Martin</li>
-            <li>Runaway Horses by Yukio Mishima</li>
-            <li>Hyperion series by Dan Simmons</li>
-            <li></li>
-            <li></li>
+            <li><i>Runaway Horses</i> by Yukio Mishima</li>
+            <li><i>Hyperion</i> series by Dan Simmons</li>
         </ul>
         <li>Working Out</li>
         <li>Video Games, a rough list of my top ten includes:</li>
