--- a/Siercks Portfolio/Siercks/Client/Pages/Projects.razor
+++ b/Siercks Portfolio/Siercks/Client/Pages/Projects.razor
@@ -5,7 +5,25 @@
 
 <h1>Project List</h1>
 <body>
+    <h2>OlmosBartending.com</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <hr />
+    <h2>Silly Bus Pong</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <hr />
     <h2>Silly Bus Sim</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <img src="sbs logo-05.png" class="banner"/>
-
 </body>
