--- a/Siercks Portfolio/Siercks/Client/Shared/NavMenu.razor.css
+++ b/Siercks Portfolio/Siercks/Client/Shared/NavMenu.razor.css
@@ -4,7 +4,8 @@
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.0001);
+    display: table-header-group;
 }
 
 .navbar-brand {
