--- a/Siercks Portfolio/Siercks/Client/style.css
+++ b/Siercks Portfolio/Siercks/Client/style.css
@@ -21,14 +21,14 @@ body {
     margin-bottom: 60px;
     font-family: Garamond;
     font-size: 18px;
-    background-color: #8C1D40;
+    background-color: #8E0C3A;
     color: antiquewhite;
-    background-image: linear-gradient(90deg, #8C1D40 60%, #FFC627 90%);
+    background-image: linear-gradient(90deg, #8E0C3A 60%, #FFC627 90%);
     accent-color: #FFC627;
 }
 
 .profile {
-    width: 45%;
+    width: 35%;
     border-radius: 25%;
     margin-bottom: 1rem;
     float: right;
@@ -43,6 +43,5 @@ img {
     display: flex;
     flex-direction: column;
     font-family: Garamond;
-    /*background-color: #8C1D40;*/
     color: white;
 }
