--- a/Siercks Portfolio/Siercks/Client/Pages/Index.razor
+++ b/Siercks Portfolio/Siercks/Client/Pages/Index.razor
@@ -28,19 +28,7 @@ My work closest resembles a server/system administrator. I've had the fortune of
             <li><i>Hyperion</i> series by Dan Simmons</li>
         </ul>
         <li>Working Out</li>
-        <li>Video Games, a rough list of my top ten includes:</li>
-        <ul>
-            <li>Splinter Cell: Chaos Theory (2005)</li>
-            <li>Mercenaries (2005)</li>
-            <li>Dark Souls (2011)</li>
-            <li>Elder Scrolls V: Skyrim (2011)</li>
-            <li>Max Payne 3 (2012)</li>
-            <li>Cities Skylines (2015)</li>
-            <li>Deus Ex: Mankind Divided (2016)</li>
-            <li>XCOM 2: War of the Chosen (2016)</li>
-            <li>Red Dead Redemption II (2018)</li>
-            <li>Sekiro: Shadows Die Twice (2019)</li>
-        </ul>
+        <li>Video Games</li>
     </ul>
 
 </body>
