--- a/SiercksPortfolio/Siercks/Client/Pages/Index.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="~/style.css">
 
-<PageTitle>About Me</PageTitle>
+<PageTitle>This is with the JSON added in.</PageTitle>
 
 <div>
     <img src="IMG-6661alt.png" style="object-fit:scale-down" class="profile" />
@@ -10,6 +10,7 @@
 </div>
 <h1 class="text-center">About Me</h1>
 <body style="left">
+
     <div>My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and chose that path when I joined the Marine Corps.
     <br /><br />
 My work closest resembles a server/system administrator. I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
