--- a/SiercksPortfolio/Siercks/Client/Pages/Index.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="~/style.css">
 
-<PageTitle>This is with the JSON added in.</PageTitle>
+<PageTitle>Siercks.org</PageTitle>
 
 <div>
     <img src="IMG-6661alt.png" style="object-fit:scale-down" class="profile" />
