--- a/SiercksPortfolio/Siercks/Client/Shared/NavMenu.razor
+++ b/SiercksPortfolio/Siercks/Client/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" stlye="font-size:16px;" href="">Siercks.org</a>
+        <a class="navbar-brand" stlye="font-size:16px;" href=""> </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
