--- a/SiercksPortfolio/Siercks/Client/Pages/Projects.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Projects.razor
@@ -5,6 +5,9 @@
 
 <h1>Project List</h1>
 <body>
+    @* <h3 class="text-decoration-underline">Portfolio Page:</h3> *@
+    
+
     <div>Coming soon!</div>
     <img src="sbs logo-05.png" class="banner"/>
 </body>
