--- a/SiercksPortfolio/Siercks/Client/Shared/NavMenu.razor
+++ b/SiercksPortfolio/Siercks/Client/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
-﻿<nav class="navbar">
-    <div class="">
-        <div class="container-fluid justify-content-md-center">
-            <div class="navbar-nav flex-row navlinks">
+﻿<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container-fluid">
+        <div class="container-fluid">
+            <div class="navbar-nav flex-row navlinks justify-content-center">
                 <div class=""></div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" title="Home" href="" Match="NavLinkMatch.All">
@@ -16,6 +16,7 @@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" title="LinkedIn" target="_blank" rel="noopener" href="https://www.linkedin.com/in/siercks">
                         <span class="fi-fontisto fontisto--linkedin" aria-hidden="true"></span>
+                        @* <div>LinkedIn</div> *@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
