--- a/SiercksPortfolio/Siercks/Client/Pages/Index.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Index.razor
@@ -19,6 +19,8 @@ My work closest resembles a server/system administrator. I've had the fortune of
     <h3 class="text-decoration-underline">Hobbies</h3>
     <ul>
         <li>Spending time with my family</li>
+        <li>Eating and cooking great food</li>
+        <li>Building .NET Projects</li>
         <li>Reading, some of my favorite books include:</li>
         <ul>
             <li><i>A Confederacy of Dunces</i> by John Kennedy Toole</li>
