--- a/SiercksPortfolio/Siercks/Client/style.css
+++ b/SiercksPortfolio/Siercks/Client/style.css
@@ -26,11 +26,12 @@ body {
     color: antiquewhite;
     background-image: linear-gradient(90deg, #8E0C3A 60%, #FFC627 90%);
     accent-color: #FFC627;
+    background-color: #8E0C3A;
 }
 
 .profile {
-    width: 30%;
-    border-radius: 25%;
+/*    width: 20%;
+*/    border-radius: 25%;
     margin-bottom: 1rem;
     float: right;
 }
@@ -45,4 +46,5 @@ img {
     flex-direction: column;
     font-family: Garamond;
     color: white;
+    background-color: #8E0C3A;
 }
