--- a/SiercksPortfolio/Siercks/Client/Pages/Index.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Index.razor
@@ -12,7 +12,7 @@
 
     <div>My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and chose that path when I joined the Marine Corps.
     <br /><br />
-My work closest resembles a server/system administrator. I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
+I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
     <br /><br />
         During 2020, I made the decision to return to college. I enrolled in Arizona State University and in May of 2022, graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine and I love city design!</div>
     <br>
