--- a/SiercksPortfolio/Siercks/Client/Pages/Index.razor
+++ b/SiercksPortfolio/Siercks/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 <link rel="stylesheet" href="style.css">
 
-<PageTitle>Andrew Siercks</PageTitle>
+<PageTitle>Andrew Siercks - Developer</PageTitle>
 
 <div>
     <img src="IMG-6661alt-700.png" typeof="" style="object-fit:scale-down" class="profile" />
@@ -9,13 +9,11 @@
 <h1 class="text-center">About Me</h1>
 <body style="left">
 
-    <div>My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and chose that path when I joined the Marine Corps.
+    <div>My name is Andrew Siercks. I grew up in a suburb of Kansas City called Kearney, MO. I've always loved technology and love dabbling in different areas of it.
     <br /><br />
-I've had the fortune of working with and leading teams of great individuals to accomplish various IT objectives.
-    <br /><br />
-        During 2020, I made the decision to return to college. I enrolled in Arizona State University and in May of 2022, graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine and I love city design!</div>
+        During 2020 I returned to college at Arizona State University and in May of 2022, graduated with a Bachelor of Planning in Urban Planning. City composition has always been an interest of mine and I love city design!</div>
     <br>
-    <h3 class="text-decoration-underline">Hobbies</h3>
+    @* <h3 class="text-decoration-underline">Hobbies</h3>
     <ul>
         <li>Spending time with my family</li>
         <li>Eating and cooking great food</li>
@@ -31,6 +29,6 @@ I've had the fortune of working with and leading teams of great individuals to a
         <li>Working Out</li>
         <li>Video Games</li>
 
-    </ul>
+    </ul> *@
 
 </body>
